--- a/Debug/makefile
+++ b/Debug/makefile
@@ -13,6 +13,7 @@ RM := rm -rf
 -include system/src/diag/subdir.mk
 -include system/src/cortexm/subdir.mk
 -include system/src/cmsis/subdir.mk
+-include src/devices/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
 -include objects.mk
